--- a/resources/index.html
+++ b/resources/index.html
@@ -12,5 +12,8 @@
     <p>
         <a class="link--cta" href="#">Download Excursion (Coming Soon!)</a>
     </p>
+    <video autoplay loop>
+        <source src="./videos/excursion.mp4" type="video/mp4">
+    </video>
 </body>
 </html>
