created secondary and subheaders

--- a/resources/index.html
+++ b/resources/index.html
@@ -12,8 +12,10 @@
     <p>
         <a class="link--cta" href="#">Download Excursion (Coming Soon!)</a>
     </p>
-    <video autoplay loop>
+    <video autoplay muted loop>
         <source src="./videos/excursion.mp4" type="video/mp4">
     </video>
+    <h2 class="header--secondary">Your personal travel guide</h2>
+    <h4 class="header--sub-header">Excursion remembers places you like, and recommends new points of interests around you.</h4>
 </body>
 </html>
