--- a/resources/index.html
+++ b/resources/index.html
@@ -17,5 +17,11 @@
     </video>
     <h2 class="header--secondary">Your personal travel guide</h2>
     <h4 class="header--sub-header">Excursion remembers places you like, and recommends new points of interests around you.</h4>
+    <p><img src="./images/camp.webp"></p>
+    <p><img src="./images/phone.webp"></p>
+    <h4 class="header--sub-header">Coming soon for iPhone and Android</h4>
+    <p>
+        <a class="link--cta" href="#">Download Excursion (Coming Soon!)</a>
+    </p>
 </body>
 </html>
