--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excursion</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
     <h1 class="header--main">Discover hidden places in the world around you</h1>
@@ -13,12 +13,12 @@
         <a class="link--cta" href="#">Download Excursion (Coming Soon!)</a>
     </p>
     <video autoplay muted loop>
-        <source src="./videos/excursion.mp4" type="video/mp4">
+        <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
     <h2 class="header--secondary">Your personal travel guide</h2>
     <h4 class="header--sub-header">Excursion remembers places you like, and recommends new points of interests around you.</h4>
-    <p><img src="./images/camp.webp"></p>
-    <p><img src="./images/phone.webp"></p>
+    <p><img src="resources/images/camp.webp"></p>
+    <p><img src="resources/images/phone.webp"></p>
     <h4 class="header--sub-header">Coming soon for iPhone and Android</h4>
     <p>
         <a class="link--cta" href="#">Download Excursion (Coming Soon!)</a>
