--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <p>
         <a class="link--cta" href="#">Download Excursion (Coming Soon!)</a>
     </p>
+    <p class="footer--copyright">© Excursion</p>
 </body>
 </html>
